# rainbowpath

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  rainbowpath.c  shell.nix
docker/: Dockerfile
extra/: colors.sh
man/: rainbowpath.1
src/: Makefile.am  args.c  args.h  builtin.c  bytes.c  bytes.h  config.c  config.h  config_parser.c  config_parser.h  curses.c  indexer.c  indexer.h  list.c  list.h  output.h  parser.c  parser.h  parser_common.c  parser_common.h  rainbowpath.c  rainbowpath.h  style_parser.c  style_parser.h  styles.c  styles.h  terminal.h  utils.c  utils.h
tests/: Makefile.am  run_parser_tests.sh  test_parser.c
